# rc-switcher-rust

./: Cargo.toml  openocd.gdb
.cargo/: config
src/: dma_serial.rs  main.rs
