[package]
name = "rc-switcher-rust"
version = "0.1.0"
authors = ["Lukas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "*"
# cortex-m-rt = "0.6.10"
panic-halt = "*"
embedded-hal = "*"
# alloc-cortex-m = "0.3.5"

[dependencies.cortex-m-rtfm]
version = "0.4.3"
features = ["timer-queue"]

[dependencies.stm32f1]
version = "*"
features = ["stm32f103", "rt"]

[dependencies.stm32f1xx-hal]
version = "0.4.0"
features = ["stm32f103", "rt"]

[profile.dev]
codegen-units = 1
panic = "abort"
# debug = false
# lto = true
# opt-level = "s"

[profile.release]
codegen-units = 1 # better optimizations
debug = false # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
